# DeepSeekRouter

./: .gitmodules  README-zh.md  README.md  pyproject.toml
config/: cron.json  currency_conversion.json  db.json  keys.json  prompt_generator.json
data/: datasets.json  models.json  services.json
deepseek_router/app/: app.py
deepseek_router/app/templates/: home.html
deepseek_router/cron/: benchmark_test_all.py  service_perf_test_all.py
deepseek_router/metric/: metric.py
deepseek_router/model/: model.py
deepseek_router/perf_test/: benchmark_test.py  prompt_generator.py  service_test.py
deepseek_router/router/: router.py
deepseek_router/utils/: utils.py
scripts/: download_datasets.sh
